# olivine

./: .gitignore  .merlin  .ocamlinit  LICENSE  Makefile  README.md  TODO  _tags  configure.sh  dune-project  olivine.opam
aster/: bitset.ml  common.ml  dune  enum.ml  fn.ml  funptr.ml  handle.ml  inspect.ml  item.ml  jbuild  lib.ml  math.ml  misc.ml  nullable.ml  record_extension.ml  rename.ml  result.ml  structured.ml  sys_info.ml  type.ml  utils.ml
c/: base.c
econfig/: dune  econfig.ml  jbuild
enkindler/: ast__bitset.ml  ast__common.ml  ast__enum.ml  ast__fn.ml  ast__funptr.ml  ast__handle.ml  ast__inspect.ml  ast__item.ml  ast__math.ml  ast__misc.ml  ast__record_extension.ml  ast__result.ml  ast__structured.ml  ast__type.ml  ast__utils.ml  aster.ml  ctype.ml  enkindler_common.ml  gen.ml  generator.ml  info.ml  infolivine.ml  latex.ml  latex_parser.mly  lib_builder.ml  libgen.ml  misc.ml  name_study.ml  printers.ml  retype.ml  subresult.ml  typed.ml  xml.ml
enkindler/cshard/: cp__helper.ml  lexer.mll  parser.mly
enkindler/cshard/_build/: _log
examples/: base.ml  dune  jbuild  tesseract.ml  triangle.ml  vec.ml
generator/: dune  jbuild  libgen.ml  printer.ml
info/: common.ml  cxml_helper.ml  cxml_lexer.mll  cxml_parser.mly  dune  entity.ml  extension_reader.ml  infolivine.ml  jbuild  latex.ml  latex_lexer.mll  latex_parser.mly  linguistic.ml  refined_types.ml  retype.ml  structured_extensions.ml  structured_spec.ml  subresult.ml  typed.ml  vulkan_dialect.ml  xml.ml
lib/: bitset.ml  dune  handle.ml  jbuild  vk__builtin__handle.ml  vk__builtin__types.ml  vk__helpers.ml  vk__result.ml  wayland.ml  xcb.ml  xlib.ml
lib_aux/: bitset.ml  builtin_types.ml  handle.ml  vk__builtin__handle.ml  vk__builtin__types.ml  vk__dfn.ml  vk__extension_sig.ml  vk__result.ml
sdl/: vk__sdl.ml  vulkan_sdl.c  vulkan_sdl.h
shaders/: base.frag  base.vert
shaders/tesseract/: base.frag  base.vert  tesseract.vert
shaders/triangle/: base.vert
spec/: dune  remove-debug-marker.diff
wsl/: xcb.ml
