name: "olivine"
version:"0.1"
opam-version: "1.2"
maintainer: "octa@polychoron.fr"
authors: "octa@polychoron.fr"
dev-repo: "git+https://github.com/Octachron/olivine"
homepage: "https://github.com/Octachron/olivine"
bug-reports: "https://github.com/Octachron/olivine/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "dune" {>= "3.14.0"}
  "ppxlib" {>= "0.20.0" & != "0.36.0"}
  "xmlm"
  "fmt"
  "menhir" {build}
  "ctypes-foreign"
  "ctypes"
  "integers"
  ]
