name: "olivine"
version:"0.1"
opam-version: "2.0"
license: "apache-2.0"              
maintainer: "octa@polychoron.fr"
authors: "octa@polychoron.fr"
synopsis: "Vulkan binding generator for OCaml" 
dev-repo: "git+https://github.com/Octachron/olivine"
homepage: "https://github.com/Octachron/olivine"
bug-reports: "https://github.com/Octachron/olivine/issues"

build:[
 ["./configure.sh"]
 [make "vk"]
]


depends: [
  "dune" {build}
  "ppxlib" {>= "0.20.0"}
  "xmlm"
  "fmt"
  "menhir" {build}
  "ctypes-foreign"
  "ctypes"
  "integers"
  ]
